set loop order to 4 by default and threshold loop order to 3 by default

--- a/doc/slha_input.dox
+++ b/doc/slha_input.dox
@@ -56,10 +56,10 @@ index | description                            | possible values                
  1    | max. number of iterations              | any positive double                         | 0 (= automatic)
  2    | BC solver                              | 0 (all), 1 (two-scale) or 2 (semi-analytic) | 0 (= all)
  3    | calculate SM pole masses               | 0 (no) or 1 (yes)                           | 0 (= no)
- 4    | pole mass loop order                   | 0, 1, 2                                     | 2 (= 2-loop)
- 5    | EWSB loop order                        | 0, 1, 2                                     | 2 (= 2-loop)
+ 4    | pole mass loop order                   | 0, 1, 2, 3, 4                               | 4 (= 4-loop)
+ 5    | EWSB loop order                        | 0, 1, 2, 3, 4                               | 4 (= 4-loop)
  6    | beta function loop order               | 0, 1, 2, 3, 4                               | 4 (= 4-loop)
- 7    | threshold corrections loop order       | 0, 1, 2                                     | 2 (= 2-loop)
+ 7    | threshold corrections loop order       | 0, 1, 2, 3                                  | 3 (= 3-loop)
  8    | higgs 2-loop correction O(at as)       | 0, 1                                        | 1 (= enabled)
  9    | higgs 2-loop correction O(ab as)       | 0, 1                                        | 1 (= enabled)
 10    | higgs 2-loop correction O(at at)       | 0, 1                                        | 1 (= enabled)
