--- a/doc/slha_input.dox
+++ b/doc/slha_input.dox
@@ -35,7 +35,7 @@ Block FlexibleSUSY
    22   0         # EFT index of SM-like Higgs in the BSM model (0 = lightest Higgs)
    23   1         # calculate BSM pole masses
    24   123111321 # individual threshold correction loop orders
-   25   0         # ren. scheme for Higgs 3L corrections (0 = DR, 1 = MDR)
+   25   0         # ren. scheme for Higgs 3L corrections (0 = DR', 1 = MDR', 2 = H3m)
    26   1         # Higgs 3-loop corrections O(alpha_t alpha_s^2)
    27   1         # Higgs 3-loop corrections O(alpha_b alpha_s^2)
    28   1         # Higgs 3-loop corrections O(alpha_t^2 alpha_s)
@@ -77,7 +77,7 @@ index | description                            | possible values                
 22    | EFT Higgs index                        | any integer >= 0                            | 0 (= lightest)
 23    | calculate pole masses of BSM particles | 0 (no) or 1 (yes)                           | 1 (= yes)
 24    | individual threshold corrections       | positive integer                            | 123111321
-25    | ren. scheme for higgs 3L corrections   | 0 (DR-bar) or 1 (MDR-bar)                   | 0 (= DR-bar)
+25    | ren. scheme for higgs 3L corrections   | 0 (DR'), 1 (MDR'), 2 (H3m)                  | 0 (= DR')
 26    | higgs 3-loop correction O(at as^2)     | 0, 1                                        | 1 (= enabled)
 27    | higgs 3-loop correction O(ab as^2)     | 0, 1                                        | 1 (= enabled)
 28    | higgs 3-loop correction O(at^2 as)     | 0, 1                                        | 1 (= enabled)
@@ -469,9 +469,10 @@ flag `FlexibleSUSY[26]` to `1`.  To enable the 3-loop correction
 `FlexibleSUSY[27]` to `1`.
 
 The 3-loop corrections from [arxiv:hep-ph/1005.5709] can be calculated
-in the \f$\overline{DR}\f$ or \f$\overline{MDR}\f$ scheme.  To use the
-\f$\overline{DR}\f$ scheme, set `FlexibleSUSY[25]` to `0`.  To use the
-\f$\overline{MDR}\f$ scheme, set `FlexibleSUSY[25]` to `1`.
+in the \f$\overline{DR}'\f$, \f$\overline{MDR}'\f$ or H3m scheme.  To
+use the \f$\overline{DR}'\f$ scheme, set `FlexibleSUSY[25]` to `0`.
+To use the \f$\overline{MDR}'\f$ scheme, set `FlexibleSUSY[25]` to
+`1`.  To use the H3m scheme, set `FlexibleSUSY[25]` to `2`.
 
 We recommend to set the following model file options to enable the
 3-loop Higgs pole mass corrections in the MSSM:
@@ -499,7 +500,7 @@ Block FlexibleSUSY
    10   1                    # Higgs 2-loop corrections O((alpha_t + alpha_b)^2)
    11   1                    # Higgs 2-loop corrections O(alpha_tau^2)
    24   123111221            # individual threshold correction loop orders
-   25   0                    # ren. scheme for Higgs 3L corrections (0 = DR, 1 = MDR)
+   25   0                    # ren. scheme for Higgs 3L corrections (0 = DR', 1 = MDR', 2 = H3m)
    26   1                    # Higgs 3-loop corrections O(alpha_t alpha_s^2)
    27   1                    # Higgs 3-loop corrections O(alpha_b alpha_s^2)
    28   1                    # Higgs 3-loop corrections O(alpha_t^2 alpha_s)
