--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,11 @@ FlexibleSUSY 2.1.1 [not released yet]
    the individual low-scale constraint settings (not only in the ones
    that set the SM-like Yukawa couplings `Yu`, `Yd`, `Ye` and `Yv`).
 
+ * Feature: 3-loop corrections of O(alpha_t^2 alpha_s^2) from
+   [1807.03509] to the quartic Higgs coupling of the SM can be used in
+   HSSUSY.  To use the corrections, FlexibleSUSY must be configured
+   with Himalaya 2.0.0 [https://github.com/Himalaya-Library/Himalaya].
+
  * Change: If unspecified, the pole mass and EWSB loop order is set to
    4 and the threshold correction loop order is set to 3.  In this way
    all available loop corrections are enable by default.
