--- a/ChangeLog
+++ b/ChangeLog
@@ -48,6 +48,11 @@ FlexibleSUSY 2.1.1 [not released yet]
  * Bugfix (commit 7da3f384d): Don't extract local const references
    from a sum of expressions because the sum may accidentally be zero.
 
+ * Bugfix (commit 35d4f1952): Correcting re-scaling factor of the
+   2-loop singlet tadpole in the NMSSM.
+
+   Thanks to Sebastian Pögel.
+
 FlexibleSUSY 2.1.0 [March, 05 2018]
 
  * Feature: Allow user to perform replacements on beta functions,
