--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,8 @@ FlexibleSUSY 2.1.1 [not released yet]
      --with-himalaya-incdir=$HIMALAYA_DIR/source/include \
      --with-himalaya-libdir=$HIMALAYA_DIR/build
 
+   $ export LD_LIBRARY_PATH="$HIMALAYA_DIR/build:$LD_LIBRARY_PATH"
+
  * Change: If unspecified, the pole mass and EWSB loop order is set to
    4 and the threshold correction loop order is set to 3.  In this way
    all available loop corrections are enable by default.
