--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-FlexibleSUSY 2.1.1 [not released yet]
+FlexibleSUSY 2.2.0 [August, 26 2018]
 
  * Feature: The symbols `upQuarksDRbar`, `downQuarksDRbar`,
    `downLeptonsDRbar` and `neutrinoDRbar` are now accessible in all
