--- a/doc/Manuals/flexiblesusy-new_features.tex
+++ b/doc/Manuals/flexiblesusy-new_features.tex
@@ -357,7 +357,7 @@ be installed:
 \section*{References}
 \addcontentsline{toc}{section}{References}
 
-\bibliographystyle{doc/JHEP}
-\bibliography{doc/flexiblesusy-new_features}
+\bibliographystyle{doc/Manuals/JHEP}
+\bibliography{doc/Manuals/flexiblesusy-new_features}
 
 \end{document}
